methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for (case <- 1 to 7) {
    if (estSurBiscuit()==true){
      vuBiscuit=true
    }
    else{
      avance()}
  }
  recule(6)
  return vuBiscuit
}